always auto translate

--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -42,6 +42,7 @@
         
         function setLocation(location) {
           $('#fileLocation').val(location);
+          setupLinks();
         }
     </script>
   </head>
@@ -58,6 +59,7 @@
                 <span>File Location:</span>
                 <input id="fileLocation" type="text" onchange="setupLinks();" />
                 <a href="#" onclick="setLocation('https://spacedb.firebaseapp.com/nov15');return false;" >NA Nov 2015</a>
+                <a href="#" onclick="setLocation('https://spacedb.firebaseapp.com/latest');return false;" >NA Dec 2015</a>
                 
                 <h2>Classes</h2>
                 <a href=".#dnt=jobtable.dnt">jobtable</a> <span></span><br />
