--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
             <span class="checkbox">
     		    <label>
-    		      <input id="autoTranslate" type="checkbox" onClick="refreshTable();"> Auto Translate</input> 
+    		      <input id="autoTranslate" type="checkbox" checked onClick="refreshTable();"> Auto Translate</input> 
     		    </label>
     		  </span>
           </div>
