--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -57,8 +57,8 @@
                 Put a URL for the dnt/xml files below or use the <a href=".">main ui</a> to add files manually.
                 </p>
                 <span>File Location:</span>
-                <input id="fileLocation" type="text" onchange="setupLinks();" />
-                <a href="#" onclick="setLocation('https://spacedb.firebaseapp.com/nov15');return false;" >NA Nov 2015</a>
+                <input style="width: 400px" id="fileLocation" type="text" onchange="setupLinks();" /><br />
+                <a href="#" onclick="setLocation('https://spacedb.firebaseapp.com/nov15');return false;" >NA Nov 2015</a> |
                 <a href="#" onclick="setLocation('https://spacedb.firebaseapp.com/latest');return false;" >NA Dec 2015</a>
                 
                 <h2>Classes</h2>
