--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -60,7 +61,7 @@
           
           <div class="row">
             <div class="col-xs-12">
-              <div id="myGrid" style="height: 800px" class="ag-fresh"></div>
+              <div id="myGrid" style="height: 700px" class="ag-fresh"></div>
             </div>
           </div>
 
@@ -79,7 +80,7 @@
       <div class="col-xs-12 col-sm-4 col-lg-3">
         <h3>Translations</h3>
         <div id="loadTranslations">
-          <form id="tfileForm">
+          <form id="tFileForm">
           <div id="tdrop_zone" class="bg-info">
             Drop files here (on this) to upload<br />
             Or ...<br />
