fix to star coin description

--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -62,7 +62,7 @@
                 <a href="#" onclick="setLocation('https://spacedb.firebaseapp.com/latest');return false;" >NA Dec 2015</a>
                 
                 <h2>New</h2>
-                <a href=".#dnt=starcointable.dnt">jobtable</a> <span></span><br />
+                <a href=".#dnt=starcointable.dnt">starcointable</a> <span></span><br />
                 <a href=".#dnt=partsskincombine.dnt">partsskincombine</a> <span></span><br />
                 
                 <h2>Classes</h2>
