store uistring in session, added jobName, fix hosted files

--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -355,7 +355,7 @@
                 <a href=".#dnt=helpkeywordtable.dnt">helpkeywordtable</a> <span></span><br />
                 <a href=".#dnt=helptable.dnt">helptable</a> <span></span><br />
                 <a href=".#dnt=herobattlefieldrankrewardtable.dnt">herobatt</a> <span></span><br />
-                <a href=".eldrankrewardtable.dnt">eldrankrewardtable</a> <span></span><br />
+                <a href=".#dnt=eldrankrewardtable.dnt">eldrankrewardtable</a> <span></span><br />
                 <a href=".#dnt=hidepartstable.dnt">hidepartstable</a> <span></span><br />
                 <a href=".#dnt=hotspringbufftable.dnt">hotspringbufftable</a> <span></span><br />
                 <a href=".#dnt=hotspringgirlscheduletable.dnt">hotspringgirlscheduletable</a> <span></span><br />
