--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -92,6 +92,11 @@
                 </ul>
                 <a href=".#dnt=itemtable_skilllevelup.dnt">itemtable_skilllevelup</a> <span></span><br />
                 <ul><li>Technique Accessories</li></ul>
+                
+                <a href=".#dnt=itemtable_glyph.dnt">itemtable_glyph</a> <span></span><br />
+                <ul>
+                  <li>Plates/crests/heraldry</li>
+                </ul>
                   
                 <h2>Reboot</h2>
                 <a href=".#dnt=enchanttable_reboot.dnt">enchanttable_reboot</a> <span></span><br />
@@ -426,7 +431,6 @@
                 <a href=".#dnt=itemtable_farm.dnt">itemtable_farm</a> <span></span><br />
                 <a href=".#dnt=itemtable_favor.dnt">itemtable_favor</a> <span></span><br />
                 <a href=".#dnt=itemtable_fish.dnt">itemtable_fish</a> <span></span><br />
-                <a href=".#dnt=itemtable_glyph.dnt">itemtable_glyph</a> <span></span><br />
                 <a href=".#dnt=itemtable_guild.dnt">itemtable_guild</a> <span></span><br />
                 <a href=".#dnt=itemtable_monstercard.dnt">itemtable_monstercard</a> <span></span><br />
                 <a href=".#dnt=itemtable_projectile.dnt">itemtable_projectile</a> <span></span><br />
