--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+  <meta charset="utf-8">
+  <title>DNT Viewer</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js"></script>
