support for missions

--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -355,6 +355,11 @@
                 <a href=".#dnt=glyphskilltable_cash.dnt">glyphskilltable_cash</a> <span></span><br />
                 <a href=".#dnt=glyphslottable.dnt">glyphslottable</a> <span></span><br />
                 <a href=".#dnt=guidemissiontable.dnt">guidemissiontable</a> <span></span><br />
+                <ul>
+                  <li>
+                    Scheduled achivments
+                  </li>
+                </ul>
                 <a href=".#dnt=guidepopup.dnt">guidepopup</a> <span></span><br />
                 <a href=".#dnt=guildinsigniatable.dnt">guildinsigniatable</a> <span></span><br />
                 <a href=".#dnt=guildleveltable.dnt">guildleveltable</a> <span></span><br />
