--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 	            <input id="translate0" class="form-control" value="NameID" type="text" />
 	            <input id="translate2" class="form-control" value="DescriptionID" type="text" />
 	            <input id="translate4" class="form-control" value="JobName" type="text" />
-	            <input id="translate6" class="form-control" value="" type="text" />
+	            <input id="translate6" class="form-control" value="SubTitleNameID" type="text" />
+	            <input id="translate8" class="form-control" value="" type="text" />
             </div>
             </form>
             
@@ -117,8 +118,9 @@
           	<div id="tBoxes2">
 	            <input id="translate1" class="form-control" value="NameIDParam" type="text" />
 	            <input id="translate3" class="form-control" value="DescriptionIDParam" type="text" />
-	            <input id="translate5" class="form-control" value="" type="text" />
+	            <input id="translate5" class="form-control" value="TitleNameID" type="text" />
 	            <input id="translate7" class="form-control" value="" type="text" />
+	            <input id="translate9" class="form-control" value="" type="text" />
             </div>
             </form>
             
