--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -278,6 +278,11 @@
                 <a href=".#dnt=customdialogtable.dnt">customdialogtable</a> <span></span><br />
                 <a href=".#dnt=cutscenetable.dnt">cutscenetable</a> <span></span><br />
                 <a href=".#dnt=dailymissiontable.dnt">dailymissiontable</a> <span></span><br />
+                <ul>
+                  <li>
+                    Scheduled achievements
+                  </li>
+                </ul>
                 <a href=".#dnt=dailymissiontable_guild.dnt">dailymissiontable_guild</a> <span></span><br />
                 <a href=".#dnt=dailypartytable.dnt">dailypartytable</a> <span></span><br />
                 <a href=".#dnt=darkcharactereventtable.dnt">darkcharactereventtable</a> <span></span><br />
@@ -355,11 +360,6 @@
                 <a href=".#dnt=glyphskilltable_cash.dnt">glyphskilltable_cash</a> <span></span><br />
                 <a href=".#dnt=glyphslottable.dnt">glyphslottable</a> <span></span><br />
                 <a href=".#dnt=guidemissiontable.dnt">guidemissiontable</a> <span></span><br />
-                <ul>
-                  <li>
-                    Scheduled achivments
-                  </li>
-                </ul>
                 <a href=".#dnt=guidepopup.dnt">guidepopup</a> <span></span><br />
                 <a href=".#dnt=guildinsigniatable.dnt">guildinsigniatable</a> <span></span><br />
                 <a href=".#dnt=guildleveltable.dnt">guildleveltable</a> <span></span><br />
