change to use session storage for translations

--- a/uistring-to-json.html
+++ b/uistring-to-json.html
@@ -126,7 +126,7 @@ function reloadHostedTFile() {
     tprogress.textContent = 'location not found in url';
   }
   else {
-    localStorage.removeItem('UIStrings');
+    sessionStorage.removeItem('UIStrings');
     dnTranslations.loadDefaultFile(
       location + '/' + tFile,
       function(msg) {
