--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -58,9 +58,10 @@
                 </p>
                 <span>File Location:</span>
                 <input style="width: 400px" id="fileLocation" type="text" onchange="setupLinks();" /><br />
-                <a href="#" onclick="setLocation('https://dnna.firebaseapp.com');return false;" >NA Dec 2015</a> |
-                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/cdn');return false;" >CDN Dec 2015</a> |
-                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/sea');return false;" >SEA Dec 2015</a>
+                <a href="#" onclick="setLocation('https://dnna.firebaseapp.com');return false;" >NA</a> |
+                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/cdn');return false;" >CDN</a> |
+                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/sea');return false;" >SEA</a> |
+                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/eu');return false;" >EU</a>
                 
                 <h2>New</h2>
                 <a href=".#dnt=starcointable.dnt">starcointable</a> <span></span><br />
