--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -59,10 +59,9 @@
                 <span>File Location:</span>
                 <input style="width: 400px" id="fileLocation" type="text" onchange="setupLinks();" /><br />
                 <a href="#" onclick="setLocation('https://dnna.firebaseapp.com');return false;" >NA</a> |
-                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/cdn');return false;" >CDN</a> |
-                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/sea');return false;" >SEA</a> |
-                <a href="#" onclick="setLocation('https://dnfiles.firebaseapp.com/eu');return false;" >EU</a> |
-                <a href="#" onclick="setLocation('https://kdnfiles.firebaseapp.com');return false;" >KDN</a>
+                <a href="#" onclick="setLocation('https://cdnfiles.firebaseapp.com');return false;" >CDN</a> |
+                <a href="#" onclick="setLocation('https://seadnfiles.firebaseapp.com');return false;" >SEA</a> |
+                <a href="#" onclick="setLocation('https://eufiles.firebaseapp.com');return false;" >EU</a>
                 
                 <h2>New</h2>
                 <a href=".#dnt=starcointable.lzjson">starcointable</a> <span></span><br />
