--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	            <input id="translate1" class="form-control" value="NameIDParam" type="text" />
 	            <input id="translate3" class="form-control" value="DescriptionIDParam" type="text" />
 	            <input id="translate5" class="form-control" value="TitleNameID" type="text" />
-	            <input id="translate7" class="form-control" value="" type="text" />
+	            <input id="translate7" class="form-control" value="MapNameID" type="text" />
 	            <input id="translate9" class="form-control" value="" type="text" />
             </div>
             </form>
