--- a/hostedfiles.html
+++ b/hostedfiles.html
@@ -61,8 +61,8 @@
                 <a href="#" onclick="setLocation('https://dnna.firebaseapp.com');return false;" >NA</a> |
                 <a href="#" onclick="setLocation('https://cdnfiles.firebaseapp.com');return false;" >CDN</a> |
                 <a href="#" onclick="setLocation('https://seadnfiles.firebaseapp.com');return false;" >SEA</a> |
-                <a href="#" onclick="setLocation('https://eufiles.firebaseapp.com');return false;" >EU</a>
-                <a href="#" onclick="setLocation('https://kdnfiles.firebaseapp.com');return false;" >KDN</a>
+                <a href="#" onclick="setLocation('https://eufiles.firebaseapp.com');return false;" >EU</a> |
+                <a href="#" onclick="setLocation('https://kdnfiles.firebaseapp.com');return false;" >KDN</a> |
                 <a href="#" onclick="setLocation('https://twdnfiles.firebaseapp.com');return false;" >TW</a>
                 
                 
