remove link to hosted files page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="row"> 
              <div class="col-xs-12">
                 <h1>DNT Viewer <small>Look at some DNT files</small></h1>
-                <a href="hostedfiles.html">Use Hosted Files</a> | <a id="columnLoaderLink" href="columnloader.html">Explore File Columns</a>
+                <!-- <a href="hostedfiles.html">Use Hosted Files</a> | --><a id="columnLoaderLink" href="columnloader.html">Explore File Columns</a>
                 <form id="fileForm">
                 <div id="drop_zone" class="bg-info">
                   Drop files here (on this) to upload<br />
